--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     </div>
 
-    <script type="text/javascript" src="index.js"></script>
+    <script type="text/javascript" src="main.js"></script>
   </body>
 
   <footer>
